<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.leiyang.materialdesign.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout

            android:id="@+id/tl_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="username"
                android:maxLength="25"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="password"
                android:maxLength="25"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/btn_login"
            android:onClick="btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btn_text"
            android:onClick="btn_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btn_listView"
            android:onClick="btnListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btn_tabLayout"
            android:onClick="btnTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btn_drawerLayout"
            android:onClick="btnDrawerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btn_coordinatorLayout"
            android:onClick="btnCoordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btn_collapsingToolBarLayout"
            android:onClick="btnCollapsingToolBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btn_behavior"
            android:onClick="btnBehavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="floatAction"
        android:src="@mipmap/record"
        android:backgroundTint="#fff"
        android:elevation="3dp"
        app:pressedTranslationZ="6dp"
        />

</RelativeLayout>